--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,10 @@
 			<artifactId>swagger-annotations</artifactId>
 			<version>2.2.16</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
     </dependencies>
 
 	<build>
